# packages/api/src/api/models/index.ts
@@ -121,6 +121,14 @@ export * from './patchBatchId400';
 export * from './patchBatchId403';
 export * from './patchBatchId404';
 export * from './patchBatchIdBody';
+export * from './patchMeetingIdAttendance200';
+export * from './patchMeetingIdAttendance200Data';
+export * from './patchMeetingIdAttendance200DataStatus';
+export * from './patchMeetingIdAttendance400';
+export * from './patchMeetingIdAttendance403';
+export * from './patchMeetingIdAttendance404';
+export * from './patchMeetingIdAttendanceBody';
+export * from './patchMeetingIdAttendanceBodyStatus';
 export * from './patchUser200';
 export * from './patchUser200Data';
 export * from './patchUser200DataProfileStatus';
@@ -188,6 +196,8 @@ export * from './refreshTokenResponseData';
 export * from './signInWithEmailRequest';
 export * from './signUpWithEmailRequest';
 export * from './startMeetingRequest';
+export * from './updateAttendanceRequest';
+export * from './updateAttendanceRequestStatus';
 export * from './updateBatchRequest';
 export * from './updateUserRequest';
 export * from './upgradeRoleRequest';
